<resources>
    <string name="app_name">TripsApp</string>
    <string name="welcome_message">¡Bienvenido a TripsApp!</string>
    <string name="precio">Precio:</string>
    <string name="fecha_de_salida">Fecha de salida:</string>
    <string name="fecha_de_llegada">Fecha de llegada:</string>
    <string name="lugar_de_salida">Lugar de salida:</string>
    <string name="seleccionar">Seleccionar:</string>
    <string name="filtrar">Filtrar</string>
    <string name="columnas">Columnas</string>
    <string name="comprar">Comprar</string>
    <string name="login_email_et_hint">Correo electrónico</string>
    <string name="login_pass_et_hint">Contraseña</string>
    <string name="login_button_mail_text">acceder</string>
    <string name="login_button_google_text">Acceso con google</string>
    <string name="login_button_register_text">Registrar</string>
    <string name="login_mail_error_1">El correo no puede ser vacío</string>
    <string name="login_mail_error_2">La contraseña no puede ser vacía</string>
    <string name="login_mail_access_error">Se ha producido un error al acceder</string>
    <string name="login_verified_mail_error">Aún no has validado tu cuenta de usuario. ¿Quieres que te reenviemos el correo de verificación?</string>
    <string name="login_verified_mail_ok">Enviar correo</string>
    <string name="login_verified_mail_error_sent">Hemos enviado el correo de verificación</string>
    <string name="login_verified_mail_no_error_sent">No hemos podido enviar el correo de verificación</string>
    <string name="login_verified_mail_error_cancel">Cancelar</string>
    <string name="login_google_play_services_error">Debes ctualizar Google Play Services antes de continuar</string>
    <string name="login_download_gps">Actualizar</string>
    <string name="gps_download_url">market://details?id=com.google.android.gms</string>
    <string name="market_dowload_url">https://play.google.com/store/apps/details?id=com.google.android.gms</string>
    <string name="default_client_id">53400112690-sn0vmgj30epop7mvs2gou93h99i6bq3b.apps.googleusercontent.com</string>
    <string name="login_completed">El usuario %1$s ha accedido correctamente</string>
    <string name="login_pass_confirmation_et_hint">Repita la contraseña</string>
    <string name="login_button_signup_text">Registrar usuario</string>
    <string name="signup_error_user">La dirección de correo no es válida</string>
    <string name="signup_error_pass">La contraseña no es válida</string>
    <string name="signup_error_pass_not_match">Las contraseñas no coinciden</string>
    <string name="signup_created">El usuario se ha registrado correctamente</string>
    <string name="signup_created_error">Se ha producido un error al registrar nuevo usuario</string>
    <string name="welcome">"Bienvenido "</string>
    <string name="trip_titulo_et_hint">Título</string>
    <string name="trip_lugar_salida_et_hint">Lugar de salida</string>
    <string name="trip_fecha_inicio_et_hint">Fecha de inicio</string>
    <string name="trip_fecha_fin_et_hint">Fecha de fin</string>
    <string name="trip_precio_et_hint">Precio</string>
    <string name="create_trip_button_text">Crear viaje</string>
    <string name="empty_field_error">Este campo no puede ser vacío</string>
    <string name="dates_error">La fecha de fin debe ser posterior a la fecha inicio</string>
    <string name="trip_created_error">Error al crear el viaje</string>
    <string name="delete_trip">Borrar viaje</string>
    <string name="edit_trip">Editar viaje</string>
    <string name="no_trips">No existen viajes</string>
    <string name="take_picture">Obtener imagen</string>
    <string name="take_picture_rationale">Necesitas dar permiso de acceso a la cámara</string>
    <string name="take_picture_rationale_ok">Permitir</string>
    <string name="camera_not_granted">No es posible usar esta función sin permisos de la cámara</string>
    <string name="storage_not_granted">No se puede realizar la función sin permisos de almacenamiento externo</string>
    <string name="location_needed">Necesitamos tu localización para esta funcoinalidad</string>
    <string name="location_ok">Aceptar</string>
    <string name="location_cancel">Este permiso es importante para la aplicación</string>
    <string name="open_weather_api_key">5e4d24d2b5747ab15c8ab607f2fea1f3</string>
</resources>
