<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:id="@+id/login_progress" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:src="@drawable/main_icon"
        android:contentDescription="@string/app_name" />
    
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/login_main_layout" >
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/email_login_form"
            android:orientation="vertical" >
            
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/login_email" >
                <AutoCompleteTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/login_email_et"
                    android:hint="@string/login_email_et_hint"
                    android:maxLines="1"
                    android:inputType="textEmailAddress"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/login_pass" >
                <AutoCompleteTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/login_pass_et"
                    android:hint="@string/login_pass_et_hint"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>
            
            <androidx.appcompat.widget.AppCompatButton
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/login_button_mail"
                android:backgroundTint="@color/blue_button"
                android:drawableLeft="@drawable/common_full_open_on_phone"
                android:textAllCaps="true"
                android:text="@string/login_button_mail_text"
                android:textColor="@color/white" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/login_button_google"
                android:backgroundTint="@color/red_google"
                android:drawableLeft="@drawable/common_full_open_on_phone"
                android:textAllCaps="true"
                android:text="@string/login_button_google_text"
                android:textColor="@color/white" />

            <Button
                android:layout_marginTop="54dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/login_button_register"
                android:backgroundTint="@color/transparent"
                android:textAllCaps="true"
                android:text="@string/login_button_register_text"
                android:textColor="@color/blue_button" />
            
        </LinearLayout>
    </ScrollView>
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:text="ssgdf" />


</LinearLayout>