<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context=".TripFormActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/trip_titulo" >
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/trip_titulo_et"
            android:hint="@string/trip_titulo_et_hint"
            android:maxLines="1"
            android:inputType="text"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/trip_lugar_salida" >
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/trip_lugar_salida_et"
            android:hint="@string/trip_lugar_salida_et_hint"
            android:maxLines="1"
            android:inputType="text"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/trip_fecha_inicio"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".50"
            android:layout_marginRight="20dp" >

            <EditText
                android:id="@+id/trip_fecha_inicio_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/ic_date_range_24dp"
                android:hint="@string/trip_fecha_inicio_et_hint"
                android:inputType="date"
                android:maxLines="1"
                android:singleLine="true"
                android:focusableInTouchMode="false"
                android:onClick="setStartDate"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/trip_fecha_fin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".50" >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/trip_fecha_fin_et"
                android:hint="@string/trip_fecha_fin_et_hint"
                android:maxLines="1"
                android:inputType="date"
                android:singleLine="true"
                android:drawableRight="@drawable/ic_date_range_24dp"
                android:focusableInTouchMode="false"
                android:onClick="setEndDate" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/trip_precio" >
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/trip_precio_et"
            android:hint="@string/trip_precio_et_hint"
            android:maxLines="1"
            android:inputType="number"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <ProgressBar
        android:layout_gravity="center"
        android:id="@+id/progress_bar_img"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginVertical="150dp" />

    <ImageView
        android:layout_gravity="center"
        android:id="@+id/take_picture_img"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginVertical="16dp"
        android:src="@drawable/ic_insert_photo_black_24dp" />

    <Button
        android:id="@+id/take_picture_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/take_picture" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_gravity="end"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/create_trip_button"
        android:backgroundTint="@color/green_button"
        android:drawableLeft="@drawable/ic_add_circle_black_24dp"
        android:textAllCaps="true"
        android:text="@string/create_trip_button_text"
        android:textColor="@color/white" />

</LinearLayout>